--- a/Client-Side/JAVASCRIPT/Exercicios/Ex04/index.html
+++ b/Client-Side/JAVASCRIPT/Exercicios/Ex04/index.html
@@ -2,17 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> ph </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <h1> testes de valores </h1>
-    <p> ghhsdafsdajhsdafakhfsa </p>
-
-    <script>
-        var n1 = parseInt(prompt('Digite um numro: '))
-        var n2 = parseInt(prompt('Digite outro numro: '))
-
-        document.write(`a divisao entr ${n1} e ${n2} é ${n1/n2}`);
-    </script>
+    <h1>sdad</h1>
 </body>
 </html>
