--- a/Client-Side/CSS/Projetos/pMusic/index.html
+++ b/Client-Side/CSS/Projetos/pMusic/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> pMusic </title>
 </head>
 <body>
-    
+    <h1> EMBEVE SITE DE MUSICA DA pMusic </h1>
 </body>
 </html>
