--- a/Client-Side/CSS/Projetos/pMusic/index.html
+++ b/Client-Side/CSS/Projetos/pMusic/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title> pMusic </title>
 </head>
 <body>
-    <h1> EMBEVE SITE DE MUSICA DA pMusic </h1>
+    <section>
+        
+                
+    </section>
 </body>
 </html>
