--- a/Client-Side/JAVASCRIPT/Exercicios/Ex04/index.html
+++ b/Client-Side/JAVASCRIPT/Exercicios/Ex04/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>sdad</h1>
+    <h1> vai se fuder </h1>
+    <script>
+        nome = String(prompt('Informe o seu nome:'))
+        idade = parseInt(prompt('Informe a sua idade: '))
+        
+        document.write(`Bem vindo ${nome} <br>`)
+
+        document.write(`${idade >= 18? 'aprovado': '<strong> reprovado </strong>'}`)
+    </script>
 </body>
 </html>
