--- a/Client-Side/JAVASCRIPT/Exercicios/Ex05/index.html
+++ b/Client-Side/JAVASCRIPT/Exercicios/Ex05/index.html
@@ -18,7 +18,7 @@
         <h1> Odin Numero 2 </h1>
         <p> O odin ta ficando maluco e levando <br> todo mundo na rena o baguio e doidin </p>
     </div> <br>
-
+        <p name="phznn"> phznaasjh dsbdah akhdajhv </p>
     <script>
        // window.document.write(`${navigator.appName} <br> ${navigator.appVersion}`)
 
@@ -35,7 +35,8 @@
         div2.style.color = 'white'
         
         //div2.style.display = 'none'
-
+        ph = document.getElementsByName('phznn')
+        document.write(ph.innerText = 'phznn')
     </script>
 </body>
 </html>
