--- a/Client-Side/CSS/Exercicios/Ex02/index.html
+++ b/Client-Side/CSS/Exercicios/Ex02/index.html
@@ -1,62 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="index.css">
     <title> EEEFM Catharina Chequer </title>
 </head>
 <body>
     <nav class="navbar">
-        <img src="imagens/logo.png" alt="">
+        <img src="imagens/logo.png" alt="Logo.png">
+        <div class="contador"></div>
     </nav>
 
-    <header>    
-        <h1> Informe Alguns Dados abaixo! </h1>
-        <form class="nome" action="" method="post">
-            <input type="text" name="" id="">
-            <label for=""> Informe seu nome completo: </label>
-            <p> Escolha Sua Turma: </p>
-            <input type="radio" name="" id="">
-            <label for=""> 3v1 </label>
+    <main>
+        <section>
+            <img class="capa" src="imagens/capa.jpeg" alt="Capa.png">
+            <h1> Titulo </h1>
+            <p> Descriçao </p>
+            <a href="http://" target="_blank" rel="noopener noreferrer"></a>
+            <button type="submit"> Acessar </button>
+        </section>
 
-            <input type="radio" name="" id="">
-            <label for=""> 2v2 </label>
+        <section>
+            <img class="capa" src="imagens/capa.jpeg" alt="Capa.png">
+            <h1> Titulo </h1>
+            <p> Descriçao </p>
+            <button type="submit"> Acessar </button>
+        </section>
 
-            <input type="radio" name="" id="">
-            <label for=""> 2v1 </label>
+        <section>
+            <img class="capa" src="imagens/capa.jpeg" alt="Capa.png">
+            <h1> Titulo </h1>
+            <p> Descriçao </p>
+            <button type="submit"> Acessar </button>
+        </section>
 
-            <input type="radio" name="" id="">
-            <label for=""> 1v2 </label>
-
-            <input type="radio" name="" id="">
-            <label for=""> 1v1 </label>
-        </form>
-    </header>
-
-    <section>
-        <div class="eletiva1">
-            <h1> Nome Eletiva </h1>
-            <img src="capa.png" alt="">
-            <p> Discriçao da eletiva </p>
-            <button type="submit"> Acessar </button>   
-        </div>
-
-        <div class="eletiva2">
-            <h1> Nome Eletiva </h1>
-            <img src="capa.png" alt="">
-            <p> Discriçao da eletiva </p>
-            <button type="submit"> Acessar </button>   
-        </div>
-
-        <div class="eletiva3">
-            <h1> Nome Eletiva </h1>
-            <img src="capa.png" alt="">
-            <p> Discriçao da eletiva </p>
-            <button type="submit"> Acessar </button>   
-        </div>
-    </section>
+        <section>
+            <img class="capa2" src="imagens/capa2.jpeg" alt="Capa.png">
+            <h1> Titulo </h1>
+            <p> Descriçao </p>
+            <button type="submit"> Acessar </button>
+        </section>
+    </main>
 
     <footer>
-        <h1> DESENVOLVIDO POR PHZNNKS </h1>
+        <h1> DESENVOLVIDOR POR PHZNNKS</h1>
     </footer>
 </body>
 </html>
