--- a/Client-Side/CSS/Exercicios/Ex02/index.html
+++ b/Client-Side/CSS/Exercicios/Ex02/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <title> EEEFM Catharina Chequer </title>
 </head>
 <body>
@@ -16,8 +16,7 @@
             <img class="capa" src="imagens/capa.jpeg" alt="Capa.png">
             <h1> Titulo </h1>
             <p> Descriçao </p>
-            <a href="http://" target="_blank" rel="noopener noreferrer"></a>
-            <button type="submit"> Acessar </button>
+            <button type="submit"> <a href="inscricao.html"> Acessar </a> </button>
         </section>
 
         <section>
