--- a/Client-Side/CSS/Exercicios/Ex02/inscricao.html
+++ b/Client-Side/CSS/Exercicios/Ex02/inscricao.html
@@ -2,10 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="inscricao.css">
+    <title> Titulo Da Seçao </title>
 </head>
 <body>
-    <h1> EMBREVE SERA FEITO </h1>
+    <nav class="navbar">
+        <img src="imagens/logo.png" alt="Logo.png">
+        <div class="contador"></div>
+    </nav>
+
+    <main>
+        <section>
+            <img src="imagens/capa.jpeg" alt="">
+            <h1>  pedro henrique  </h1>
+            <p> Descriçao da descriçao shvfduvuvhsdg <br> ausgdadshuaasjgdgvafsdadsjsadftaf<br> djgayahashgadvasgdadadgfatysasdaa </p>
+            <div>
+                <video src="video.mp4"></video>
+            </div>
+            
+        </section>
+    </main>
 </body>
 </html>
