--- a/Client-Side/JAVASCRIPT/Exercicios/Ex04/index.html
+++ b/Client-Side/JAVASCRIPT/Exercicios/Ex04/index.html
@@ -5,14 +5,12 @@
     <title> ph </title>
 </head>
 <body>
-    <h1> testes de valores </h1>
-    <p> ghhsdafsdajhsdafakhfsa </p>
-
+    <h1> valores ternarios </h1>
+    
     <script>
-        var n1 = parseInt(prompt('Digite um numro: '))
-        var n2 = parseInt(prompt('Digite outro numro: '))
-
-        document.write(`a divisao entr ${n1} e ${n2} é ${n1/n2}`);
+        var idade = parseInt(prompt('Informe a sua idade'));
+       
+        document.write(`${idade >= 18?'aprovado':'reprovado'}`)
     </script>
 </body>
 </html>
