--- a/Client-Side/JAVASCRIPT/Exercicios/Ex05/index.html
+++ b/Client-Side/JAVASCRIPT/Exercicios/Ex05/index.html
@@ -17,12 +17,14 @@
 
     <script>
 
-        var p0 = document.getElementsByTagName('p')[0]
+        /* var p0 = document.getElementsByTagName('p')[0]
         p0.innerHTML = 'Mudei a escrita o primeiro paragrafo'
 
         var p1 = document.getElementById('parag')
         p1.style.color = 'blue' 
-
+        */
+        
+        
     </script>
 </body>
 </html>
