--- a/Client-Side/JAVASCRIPT/Exercicios/Ex07/index.html
+++ b/Client-Side/JAVASCRIPT/Exercicios/Ex07/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="box" onclick="clicar()" onmouseenter="hover()" onmouseout="hoverout()">
-        <p class="txt"> Clique </p>
+        <p class="txt">Aperta Aqui</p>
     </div>
 
     <script src="script.js"></script>
