--- a/Client-Side/JAVASCRIPT/Exercicios/Ex07/index.html
+++ b/Client-Side/JAVASCRIPT/Exercicios/Ex07/index.html
@@ -5,7 +5,7 @@
     <title> Ph </title>
 </head>
 <body>
-    <div class="box" onclick="clicar()" onmouseenter="hover()" onmouseout="hoverout()">
+    <div class="box">
         <p class="txt">Aperta Aqui</p>
     </div>
 
