--- a/Client-Side/CSS/Exercicios/Ex02/inscricao.html
+++ b/Client-Side/CSS/Exercicios/Ex02/inscricao.html
@@ -14,13 +14,16 @@
     <main>
         <section>
             <img src="imagens/capa.jpeg" alt="">
-            <h1>  pedro henrique  </h1>
-            <p> Descriçao da descriçao shvfduvuvhsdg <br> ausgdadshuaasjgdgvafsdadsjsadftaf<br> djgayahashgadvasgdadadgfatysasdaa </p>
-            <div>
+            <h1> Titulo </h1>
+            <p> Descriçao </p>
+            <div class="box">
                 <video src="video.mp4"></video>
             </div>
-            
         </section>
     </main>
+
+    <footer>
+        <h1> DESENVOLVIDOR POR PHNNKS </h1>
+    </footer>
 </body>
 </html>
