--- a/Client-Side/CSS/Exercicios/Ex02/inscricao.html
+++ b/Client-Side/CSS/Exercicios/Ex02/inscricao.html
@@ -12,14 +12,13 @@
     </nav>
 
     <main>
-        <section>
-            <img src="imagens/capa.jpeg" alt="">
-            <h1> Titulo </h1>
-            <p> Descriçao </p>
-            <div class="box">
-                <video src="video.mp4"></video>
-            </div>
-        </section>
+        <img src="imagens/capa.jpeg" alt="">
+        <h1> Nome Do Titulo </h1>
+        <p> Descriçao </p>
+        <div class="box">
+            <video src="video.mp4"></video>
+        </div>
+        <button type="submit"> Inscreve-se </button>
     </main>
 
     <footer>
