--- a/Client-Side/CSS/Exercicios/Ex02/secao.html
+++ b/Client-Side/CSS/Exercicios/Ex02/secao.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="inscricao.css">
+    <link rel="stylesheet" href="secao.css">
     <title> Titulo Da Seçao </title>
 </head>
 <body>
