--- a/Client-Side/CSS/Exercicios/Ex02/index.html
+++ b/Client-Side/CSS/Exercicios/Ex02/index.html
@@ -16,7 +16,7 @@
             <img class="capa" src="imagens/capa.jpeg" alt="Capa.png">
             <h1> Titulo </h1>
             <p> Descriçao </p>
-            <button type="submit"> <a href="inscricao.html"> Acessar </a> </button>
+            <button type="submit"> <a href="secao.html"> Acessar </a> </button>
         </section>
 
         <section>
