--- a/Client-Side/CSS/Exercicios/Ex02/index.html
+++ b/Client-Side/CSS/Exercicios/Ex02/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title> EEEFM Catharina Chequer </title>
 </head>
 <body>
