--- a/Client-Side/CSS/Exercicios/Ex01/cnoticias.html
+++ b/Client-Side/CSS/Exercicios/Ex01/cnoticias.html
@@ -42,6 +42,7 @@
     <footer>
         <h1> Desenvolvido por PatocksX </h1>
     </footer>
-   
+
+    <script src="scripts.js"></script>
 </body>
 </html>
