--- a/Client-Side/CSS/Exercicios/Ex03/index.html
+++ b/Client-Side/CSS/Exercicios/Ex03/index.html
@@ -1,1 +1,13 @@
-gh repo clone gustavoguanabara/html-css
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title> Ph </title>
+</head>
+<body>
+    <nav>
+
+    </nav>
+    
+</body>
+</html>
