--- a/Client-Side/CSS/Exercicios/Ex03/index.html
+++ b/Client-Side/CSS/Exercicios/Ex03/index.html
@@ -33,11 +33,44 @@
 
         <img src="imagens/bugdroid.png" alt="">
         <p> A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo. </p>
+        <video src="tznolove.mp4"></video>
+        
         <section>
+            <h1> Quer aprender mais?  </h1>
+            <p> Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0. </p>
+            <span> 
+                <ul>
+                    <li> <a href=""> 1.5 - Cupcake </a> </li>
+                    <li> <a href=""> 1.6 - Donut </a> </li>
+                    <li> <a href=""> 3.0 - Eclair </a> </li>
+                    <li> <a href=""> 2.2 - Froyo </a> </li>
+                    <li> <a href=""> 2.3 - Gingerbread </a> </li>
+                    <li> <a href=""> 3.0 - Honeycomb </a> </li>
+                    <li> <a href=""> 4.0 - Ice Cream Sandwich </a> </li>
+                </ul>
+            </span>
 
+            <span>
+                <ul>
+                    <li> <a href=""> 4.1 - Jelly Bean </a> </li>
+                    <li> <a href=""> 4.4 - KitKat </a> </li>
+                    <li> <a href=""> 5.0 - Lolipop </a> </li>
+                    <li> <a href=""> 6.0 - Marshmallow </a> </li>
+                    <li> <a href=""> 7.0 - Nougat </a> </li>
+                    <li> <a href=""> 8.0 - Oreo </a> </li>
+                    <li> <a href=""> 9.0 - Pie </a> </li>
+                </ul>
+            </span>
+
+            <p> Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10. </p>
+            <p> Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android. </p>
         </section>
+
+        <p> Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote. </p>
     </main>
 
-
+    <footer>
+        <p> SITE CRIADOR PELO MENORPHZNNKS </p>
+    </footer>
 </body>
 </html>
