--- a/Client-Side/CSS/Exercicios/Ex03/index.html
+++ b/Client-Side/CSS/Exercicios/Ex03/index.html
@@ -33,8 +33,12 @@
 
         <img src="imagens/bugdroid.png" alt="">
         <p> A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo. </p>
-        <video src="tznolove.mp4"></video>
-        
+        <video src="tznolove.mp4">
+        <video controls>
+                <source src="tznolove.mp4" type="video/mp4">
+                Seu navegador não suporta o elemento de vídeo.
+        </video>
+
         <section>
             <h1> Quer aprender mais?  </h1>
             <p> Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0. </p>
