--- a/Client-Side/CSS/Exercicios/Ex03/index.html
+++ b/Client-Side/CSS/Exercicios/Ex03/index.html
@@ -33,10 +33,9 @@
 
         <img src="imagens/bugdroid.png" alt="">
         <p> A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo. </p>
-        <video src="tznolove.mp4">
-        <video controls>
-                <source src="tznolove.mp4" type="video/mp4">
-                Seu navegador não suporta o elemento de vídeo.
+        <video width="320" height="240" controls>
+            <source src="video.mp4" type="video/mp4">
+            Seu navegador não suporta o elemento de vídeo.
         </video>
 
         <section>
