--- a/Client-Side/CSS/Exercicios/Ex03/index.html
+++ b/Client-Side/CSS/Exercicios/Ex03/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title> Android </title>
 </head>
