--- a/Client-Side/CSS/Exercicios/Ex03/index.html
+++ b/Client-Side/CSS/Exercicios/Ex03/index.html
@@ -7,7 +7,7 @@
     <title> Android </title>
 </head>
 <body>
-    <nav>
+    <nav class="navbar">
         <h1>Curiosidades de Tecnologia</h1>
         <p>Tudo aquilo que você sempre quis saber sobre o mundo <br> Tech, em um único lugar</p>
         <ul>
