--- a/Client-Side/CSS/Exercicios/Ex03/index.html
+++ b/Client-Side/CSS/Exercicios/Ex03/index.html
@@ -22,12 +22,12 @@
         <h1>História do Mascote do Android</h1>
         <p>    Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho. </p>
         
-        <h1>A primeira versão</h1>
+        <h1 id="h1backg">A primeira versão</h1>
         <p> A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote. </p>
         <img src="imagens/dan-droids.png" alt="">
         <p> Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids. </p>
 
-        <h1> Surge um novo mascote </h1>
+        <h1 id="h1backg"> Surge um novo mascote </h1>
         <img src="imagens/irina-blok.jpg" alt="">
         <p> A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável. </p>
 
