--- a/Client-Side/CSS/Exercicios/Ex03/index.html
+++ b/Client-Side/CSS/Exercicios/Ex03/index.html
@@ -24,15 +24,16 @@
         
         <h1 id="h1backg">A primeira versão</h1>
         <p> A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote. </p>
-        <img src="imagens/dan-droids.png" alt="">
+        <img class="dandroids" src="imagens/dan-droids.png" alt="">
         <p> Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids. </p>
 
         <h1 id="h1backg"> Surge um novo mascote </h1>
-        <img src="imagens/irina-blok.jpg" alt="">
+        <img class="irinabloc" src="imagens/irina-blok.jpg" alt="">
         <p> A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável. </p>
-
-        <img src="imagens/bugdroid.png" alt="">
+ 
+        <img id="bugdroid" src="imagens/bugdroid.png" alt="">
         <p> A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo. </p>
+
         <video width="320" height="240" controls>
             <source src="video.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
