--- a/Client-Side/CSS/Exercicios/Ex03/index.html
+++ b/Client-Side/CSS/Exercicios/Ex03/index.html
@@ -34,7 +34,7 @@
         <img class="bugdroid" src="imagens/bugdroid.png" alt="">
         <p> A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo. </p>
 
-        <video width="100%" height="100%" controls>
+        <video width="100%" controls>
             <source src="video.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
@@ -54,7 +54,7 @@
                 </ul>
             </span>
 
-            <span>
+            <span class="span2">
                 <ul>
                     <li> <a href=""> 4.1 - Jelly Bean </a> </li>
                     <li> <a href=""> 4.4 - KitKat </a> </li>
