--- a/Client-Side/JAVASCRIPT/Exercicios/Ex09/index.html
+++ b/Client-Side/JAVASCRIPT/Exercicios/Ex09/index.html
@@ -11,9 +11,7 @@
         <label> Velocidade percorrida (Km): </label> 
         <input type="text" name="" id="vel"> <br>
         
-        <div id="resp"> 
-            <h2> Resultado: </h2>
-        </div>
+        <div id="resp"></div>
 
         <button id="button" type="submit"> Verficar </button>
     </section>
